--- a/index.html
+++ b/index.html
@@ -26,29 +26,29 @@
             <div class="form-grid">
                 <div class="form-group">
                     <label for="x0">Enter x<sub>0</sub> (initial prey population):</label>
-                    <input type="text" id="x0" name="x0" required>
+                    <input type="text" id="x0" name="x0" value="10" required>
                 </div>
                 <div class="form-group">
                     <label for="y0">Enter y<sub>0</sub> (initial predator population):</label>
-                    <input type="text" id="y0" name="y0" required>
+                    <input type="text" id="y0" name="y0" value="10" required>
                 </div>
 
                 <div class="form-group">
                     <label for="alpha">Enter α (growth rate of prey):</label>
-                    <input type="text" id="alpha" name="alpha" required>
+                    <input type="text" id="alpha" name="alpha" value="1.1" required>
                 </div>
                 <div class="form-group">
                     <label for="beta">Enter β (death rate of prey):</label>
-                    <input type="text" id="beta" name="beta" required>
+                    <input type="text" id="beta" name="beta" value="0.4" required>
                 </div>
 
                 <div class="form-group">
                     <label for="delta">Enter δ (growth rate of predator):</label>
-                    <input type="text" id="delta" name="delta" required>
+                    <input type="text" id="delta" name="delta" value="0.1" required>
                 </div>
                 <div class="form-group">
                     <label for="gamma">Enter γ (death rate of predator):</label>
-                    <input type="text" id="gamma" name="gamma" required>
+                    <input type="text" id="gamma" name="gamma" value="0.4" required>
                 </div>
             </div>
             <br>
