--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Lotka-Volterra model</title>
 </head>
 <body>
-    <div id="container">
+    <div id="container" style="width: 80vw; margin: auto;">
         <h1>Lotka-Volterra model</h1>
         <hr>
         <br>
@@ -23,7 +23,7 @@
         <hr>
         <form id="form">
             <br>
-            <div class="form-grid">
+            <div class="form-grid" style="display: none;">
                 <div class="form-group">
                     <label for="x0">Enter x<sub>0</sub> (initial prey population):</label>
                     <input type="text" id="x0" name="x0" value="10" required>
@@ -53,7 +53,7 @@
             </div>
             <br>
             <br>
-            <p style="color: red; font-weight: bold;">* Enter the default values x<sub>0</sub> = 10, y<sub>0</sub> = 10, α = 1.1, β = 0.4, δ = 0.1, γ = 0.4</p>
+            <p style="color: red; font-weight: bold; margin-top: 0;">* The default values are x<sub>0</sub> = 10, y<sub>0</sub> = 10, α = 1.1, β = 0.4, δ = 0.1, γ = 0.4</p>
             <br>
             <button type="submit">Plot Graph</button>
             <br>
